# Federated-Learning-in-Facial-Recognition-Based-Attendance-System

./: .gitignore  Evaluasi.md  Parameter.md  README.md  catatan-list-proses.md
Laporan/: alur.md  catatan.md  comparison.md
centralized-learning/: .env.example  CaraKerja.md  README.md  docker-compose-client.yml  docker-compose-server.yml  docker-compose.client1.yaml  docker-compose.client2.yaml  docker-compose.server.yaml  docker-compose.yaml
centralized-learning/client/: .env.example  Dockerfile  requirements-inference.txt  requirements.txt
centralized-learning/server/: .dockerignore  Dockerfile  check_db.py  requirements-train.txt  requirements.txt
federated-learning/: .env.example  CaraKerja.md  README.md  docker-compose-client.yml  docker-compose-server.yml  docker-compose.client1.yaml  docker-compose.client2.yaml  docker-compose.server.yaml  docker-compose.yaml
federated-learning/client/: .dockerignore  (+5 more)
laporan/: .gitignore
pre/: audit_results.txt  audit_weights.py  check_datasets.py  check_lux.py  cleanup_data.py  compare_checkpoints.py  data-equality.py  data_equality.py  find_optimal_split.py  frame_extractor.py  generate_charts.py  info-lux.txt  main.py  pyproject.toml  requirements.txt  test_model.pth  test_model.py  video_client_logic.py  video_server.py
pre/uji-cl/: model.ipynb  test_model.py
pre/uji-fl/: app.py  global_model_final.pth  head_client1.pth  head_client2.pth  mobilefacenet.py  preprocessing.py  test_model.py  training.py
pre/uji-fl-isolated/: test_inference.py  validate_fl.py
skenario/: README.md
uji-coba/: README.md
(+161 files in other folders)
